--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 "type": "module",
 "scripts": {
 "dev": "vite",
-"build": "tsc && vite build",
+"build": "vite build",
 "preview": "vite preview"
 },
 "dependencies": {
@@ -16,10 +16,10 @@
 "devDependencies": {
 "@types/react": "^18.2.0",
 "@types/react-dom": "^18.2.0",
-"typescript": "^5.0.2",
-"vite": "^4.4.5",
-"tailwindcss": "^3.3.3",
 "autoprefixer": "^10.4.14",
-"postcss": "^8.4.27"
+"postcss": "^8.4.27",
+"tailwindcss": "^3.3.3",
+"typescript": "^5.0.2",
+"vite": "^4.4.5"
 }
 }
