--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 "postcss": "^8.4.27",
 "tailwindcss": "^3.3.3",
 "typescript": "^5.0.2",
-"vite": "^4.4.5"
+"vite": "^4.4.5",
+"@vitejs/plugin-react": "^4.0.0"
 }
 }
